--- a/index.css
+++ b/index.css
@@ -1,9 +1,15 @@
 body {
-    background-image: url("station.jpg");
-    background-size: cover;
-    font-family: -apple-system, 'Helvetica Neue', Ubuntu, 'Open Sans', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, sans-serif;
+    background: linear-gradient(45deg, #ff7e5f, #feb47b);
+    font-family: 'Segoe UI', Roboto, Oxygen, Cantarell, sans-serif;
     font-weight: bold;
     text-align: center;
+}
+
+.container {
+    padding: 24px;
+    background-color: rgb(255, 255, 255, 0.3);
+    border-radius: 1rem;
+
 }
 
 h1 {
